adding in live feeds

--- a/develop/index.html
+++ b/develop/index.html
@@ -78,12 +78,17 @@
                         and great music</p>
                 </section>
                 <section class="menu-card-details">
-                    <figure></figure>
+                    <figure><iframe src="https://g1.ipcamlive.com/player/player.php?alias=broadwaycam" 
+                        alt="Live stream video of Nashville Lower Broadway" width="700px" height="350px" frameborder="0" 
+                        allowfullscreen="" style="border: none; max-width: 100%; overflow: hidden;"></iframe>
+                      </figure>
                     <a href="#">View of Lower Broadway</a>
                     <p>Traffic cam courtesy of Big Time Boots</p>
                 </section>
                 <section class="menu-card-details">
-                    <figure></figure>
+                    <figure><iframe src="https://g1.ipcamlive.com/player/player.php?alias=lctowersouth" 
+                        alt="Live stream video of Nashville tower sky camera" width="700px" height="350px" frameborder="0" 
+                        allowfullscreen="" style="border: none; max-width: 100%; overflow: hidden;"></iframe></figure>
                     <a href="#">Sky view from L&C Tower</a>
                     <p>Sky cam courtesy of Fox 17</p>
                 </section>
