Fished raw styling for desktop resolution

--- a/develop/index.html
+++ b/develop/index.html
@@ -51,81 +51,72 @@
                 </div>
                 <section class="main-content">
                     <section class="menu-card-title">
-                        <h3>Apps</h3>
-                        <section class="cards-apps">
+                        <h3>APPS</h3>
+                        <section class="cards-apps" id="apps">
                             <section class="menu-card-details">
                                 <!-- Image / Link / Description -->
-                                <figure></figure>
+                                <img src="./assets/images/RunBuddyCard.gif" alt="Run Buddy Icon" />
                                 <a href="#">Run Buddy</a>
                                 <p>Website for gym including personal trainers for custom workouts</p>
                             </section>
                             <section class="menu-card-details">
-                                <figure></figure>
+                                <img src="./assets/images/HoriseonCard.gif" alt="Horiseon Icon" />
                                 <a href="#">Horiseon</a>
                                 <p>Website for marketing firm specializing in SEO, reputation management and social
                                     media
                                 </p>
                             </section>
                             <section class="menu-card-details">
-                                <figure></figure>
+                                <img src="./assets/images/ReactorCard.jpg" alt="Reactor Control Icon" />
                                 <a href="#">Reactor Control Program</a>
                                 <p>Website for directly controlling the spaceship fusion reactor core</p>
                             </section>
                             <section class="menu-card-details">
-                                <figure></figure>
+                                <img src="./assets/images/ExtreneFarmCard.jpg" alt="Extreme Farming Icon" />
                                 <a href="#">Extreme Farming</a>
                                 <p>Website for yelling at crops to make them grow faster</p>
                             </section>
-                            <section class="menu-card-details">
-                                <figure></figure>
-                                <a href="#">Full Contact Baking</a>
-                                <p>Website for aggressively making pastries</p>
-                            </section>
-                            <section class="menu-card-details">
-                                <figure></figure>
-                                <a href="#">This space for rent</a>
-                                <p>Website for cluttering up the interwebs and make some money while doing it</p>
-                            </section>
                         </section>
-                        <h3>Base</h3>
-                        <section class="cards-base">
+                    </section>
+                    <section class="menu-card-title">
+                        <h3>BASE</h3>
+                        <section class="cards-base" id="base">
                             <section class="menu-card-details">
-                                <figure></figure>
+                                <iframe
+                                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47264.0525706413!2d-86.80036994463407!3d36.15771647325709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8864ec3213eb903d%3A0x7d3fb9d0a1e9daa0!2sNashville%2C%20TN!5e0!3m2!1sen!2sus!4v1619326975586!5m2!1sen!2sus"
+                                    width="206" height="150" style="border:0;" allowfullscreen=""
+                                    loading="lazy"></iframe>
                                 <a href="#">Nashville</a>
-                                <p>My homebase where it's sometime too hot and too crowded, but always has good food,
-                                    good
-                                    drinks,
-                                    and great music</p>
+                                <p>Latitude: 36° 09' 57.20" N
+                                    Longitude: -86° 47' 3.98" W</p>
                             </section>
                             <section class="menu-card-details">
-                                <figure><iframe src="https://g1.ipcamlive.com/player/player.php?alias=broadwaycam"
-                                        alt="Live stream video of Nashville Lower Broadway" width="700px" height="350px"
+                               <iframe src="https://g1.ipcamlive.com/player/player.php?alias=broadwaycam"
+                                        alt="Live stream video of Nashville Lower Broadway" width="206px" height="150px"
                                         frameborder="0" allowfullscreen=""
                                         style="border: none; max-width: 100%; overflow: hidden;"></iframe>
-                                </figure>
+                                
                                 <a href="#">View of Lower Broadway</a>
                                 <p>Traffic cam courtesy of Big Time Boots</p>
                             </section>
                             <section class="menu-card-details">
-                                <figure><iframe src="https://g1.ipcamlive.com/player/player.php?alias=lctowersouth"
-                                        alt="Live stream video of Nashville tower sky camera" width="700px"
-                                        height="350px" frameborder="0" allowfullscreen=""
-                                        style="border: none; max-width: 100%; overflow: hidden;"></iframe></figure>
+                                <iframe src="https://g1.ipcamlive.com/player/player.php?alias=lctowersouth"
+                                        alt="Live stream video of Nashville tower sky camera" width="206px"
+                                        height="156px" frameborder="0" allowfullscreen=""
+                                        style="border: none; max-width: 100%; overflow: hidden;"></iframe>
                                 <a href="#">Sky view from L&C Tower</a>
                                 <p>Sky cam courtesy of Fox 17</p>
                             </section>
                         </section>
-                        <h3>Bio</h3>
+                    </section>
+                    <section class="menu-card-title" id="bio">
+                        <h3>BIO</h3>
                         <section class="cards-bio">
                             <section class="menu-card-details">
-                                <!-- <figure>
-                            <img id="myavatar" src="./assets/images/Avatar_full.jpg"
-                                alt="Me with a silly smile and needing a shave" />
-                        </figure>
-                        <a href="#">Me</a>
-                        <p>Overweight, over-caffinated, under-worked, but with a sense of humor and a lousy singing
-                            voice.
-                        </p> -->
+                                <img id="myavatar" src="./assets/images/myavatar.jpg"
+                                    alt="Me with a silly smile and needing a shave" />
+                                <a href="#">Me</a>
+                                <p>Overweight, over-caffinated, under-worked, but with a sense of humor and a lousy singing voice</p>
                             </section>
                             <section class="menu-card-details">
                                 <!-- <figure>
@@ -143,22 +134,21 @@
                             </section>
                         </section>
                     </section>
-                    <aside class="detail-content">
-                        <h3>Random bits of knowledge</h3>
-                        <figure> <img src="./assets/images/webbCredo.gif"
-                                alt="Work hard, rock hard, sleep hard, grow big, and wear glasses if you need 'em" />
-                        </figure>
-                        <a href="https://www.webbwilder.com/index.php">Web Wilder website </a>
-                        <p>Because it's a great start</p>
-                    </aside>
                 </section>
+                <aside class="detail-content">
+                    <h3>Random bits of knowledge</h3>
+                    <img src="./assets/images/webbCredo.gif"
+                        alt="Work hard, rock hard, sleep hard, grow big, and wear glasses if you need 'em" />
+                    <a href="https://www.webbwilder.com/index.php">Web Wilder website </a>
+                    <p>Because it's a great start</p>
+                </aside>
             </section>
         </div>
         <section class="bottom-wrapper">
             <!-- footer -->
             <footer>
                 <h3>Contact</h3>
-                <section class="contact-info">
+                <section class="contact-info" id="contact">
                     <a href="#contact">LinkedIn</a><br />
                     &copy; 2022 Mohlenkamp, Inc.
                 </section>
