Updated app spotlight for A.C.

--- a/develop/index.html
+++ b/develop/index.html
@@ -13,11 +13,7 @@
         <div class="top-outer-wrapper">
             <section class="top-wrapper">
                 <div class="logo-wrapper">
-                    <!--
-                    <img id="myavatar" src="./assets/images/Avatar_full.jpg"
-                        alt="Me with a silly smile and needing a shave" height="90px" width="90px" />
-                     Personal logo here -->
-
+                    <p>JM</p>
                 </div>
                 <div class="nav-wrapper">
                     <nav>
@@ -56,15 +52,13 @@
                             <section class="menu-card-details">
                                 <!-- Image / Link / Description -->
                                 <img src="./assets/images/RunBuddyCard.gif" alt="Run Buddy Icon" />
-                                <a href="#">Run Buddy</a>
+                                <a href="https://mohlenkamp.github.io/run-buddy/">Run Buddy</a>
                                 <p>Website for gym including personal trainers for custom workouts</p>
                             </section>
                             <section class="menu-card-details">
-                                <img src="./assets/images/HoriseonCard.gif" alt="Horiseon Icon" />
-                                <a href="#">Horiseon</a>
-                                <p>Website for marketing firm specializing in SEO, reputation management and social
-                                    media
-                                </p>
+                                <img src="./assets/images/ExtreneFarmCard.jpg" alt="Extreme Farming Icon" />
+                                <a href="#">Extreme Farming</a>
+                                <p>Website for yelling at crops to make them grow faster</p>
                             </section>
                             <section class="menu-card-details">
                                 <img src="./assets/images/ReactorCard.jpg" alt="Reactor Control Icon" />
@@ -72,9 +66,10 @@
                                 <p>Website for directly controlling the spaceship fusion reactor core</p>
                             </section>
                             <section class="menu-card-details">
-                                <img src="./assets/images/ExtreneFarmCard.jpg" alt="Extreme Farming Icon" />
-                                <a href="#">Extreme Farming</a>
-                                <p>Website for yelling at crops to make them grow faster</p>
+                                <img src="./assets/images/HoriseonCard.gif" alt="Horiseon Icon" />
+                                <a href="https://mohlenkamp.github.io/Horiseon/">Horiseon</a>
+                                <p>Website for marketing firm specializing in SEO, reputation management and social
+                                    media</p>
                             </section>
                         </section>
                     </section>
@@ -84,28 +79,28 @@
                             <section class="menu-card-details">
                                 <iframe
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47264.0525706413!2d-86.80036994463407!3d36.15771647325709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8864ec3213eb903d%3A0x7d3fb9d0a1e9daa0!2sNashville%2C%20TN!5e0!3m2!1sen!2sus!4v1619326975586!5m2!1sen!2sus"
-                                    width="206" height="150" style="border:0;" allowfullscreen=""
+                                    width="206" height="160" style="border:0;" allowfullscreen=""
                                     loading="lazy"></iframe>
-                                <a href="#">Nashville</a>
-                                <p>Latitude: 36° 09' 57.20" N
+                                <br /><p>Nashville <br /><br />
+                                Latitude: 36° 09' 57.20" N
                                     Longitude: -86° 47' 3.98" W</p>
                             </section>
                             <section class="menu-card-details">
                                <iframe src="https://g1.ipcamlive.com/player/player.php?alias=broadwaycam"
-                                        alt="Live stream video of Nashville Lower Broadway" width="206px" height="150px"
+                                        alt="Live stream video of Nashville Lower Broadway" width="206px" height="158px"
                                         frameborder="0" allowfullscreen=""
                                         style="border: none; max-width: 100%; overflow: hidden;"></iframe>
                                 
-                                <a href="#">View of Lower Broadway</a>
-                                <p>Traffic cam courtesy of Big Time Boots</p>
+                               <br /><p>View of Lower Broadway<br/><br />
+                                Traffic cam courtesy of Big Time Boots</p>
                             </section>
                             <section class="menu-card-details">
                                 <iframe src="https://g1.ipcamlive.com/player/player.php?alias=lctowersouth"
                                         alt="Live stream video of Nashville tower sky camera" width="206px"
-                                        height="156px" frameborder="0" allowfullscreen=""
+                                        height="158px" frameborder="0" allowfullscreen=""
                                         style="border: none; max-width: 100%; overflow: hidden;"></iframe>
-                                <a href="#">Sky view from L&C Tower</a>
-                                <p>Sky cam courtesy of Fox 17</p>
+                                <br /><p>Sky view from L&C Tower<br /><br />
+                                Sky cam courtesy of Fox 17</p>
                             </section>
                         </section>
                     </section>
@@ -119,29 +114,26 @@
                                 <p>Overweight, over-caffinated, under-worked, but with a sense of humor and a lousy singing voice</p>
                             </section>
                             <section class="menu-card-details">
-                                <!-- <figure>
-                            <img id="myavatar" src="./assets/images/Avatar_full.jpg"
-                                alt="Me with a silly smile and needing a shave" />
-                        </figure> -->
-                                <a href="#">GitHub Repo</a>
+                                <img src="./assets/images/GitHubCard.gif" alt="GitHub Icon">
+                                <a href="https://github.com/Mohlenkamp">GitHub Repo</a>
                                 <p>If you want to see some of my work</p>
                             </section>
                             <section class="menu-card-details">
-                                <figure>
-                                </figure>
-                                <a href="#">LinkedIn Page</a>
+                                <img src="./assets/images/LinkedInCard.gif" alt="LinkedIn Icon" />
+                                <a href="https://www.linkedin.com/in/john-mohlenkamp-3418b98/">LinkedIn Page</a>
                                 <p>Because I don't like talking about myself.....</p>
                             </section>
                         </section>
                     </section>
                 </section>
-                <aside class="detail-content">
-                    <h3>Random bits of knowledge</h3>
-                    <img src="./assets/images/webbCredo.gif"
-                        alt="Work hard, rock hard, sleep hard, grow big, and wear glasses if you need 'em" />
-                    <a href="https://www.webbwilder.com/index.php">Web Wilder website </a>
-                    <p>Because it's a great start</p>
-                </aside>
+                <article class="detail-content">
+                    <h3>Application Spotlight</h3>
+                    <img src="./assets/images/HoriseonCard.gif" alt="Horiseon Icon" />
+                    <a href="https://mohlenkamp.github.io/Horiseon/">Horiseon</a>
+                    <p>Website for marketing firm specializing in SEO, reputation management and social
+                        media
+                    </p>
+                </article>
             </section>
         </div>
         <section class="bottom-wrapper">
@@ -149,7 +141,7 @@
             <footer>
                 <h3>Contact</h3>
                 <section class="contact-info" id="contact">
-                    <a href="#contact">LinkedIn</a><br />
+                    <a href="https://www.linkedin.com/in/john-mohlenkamp-3418b98/">LinkedIn</a><br />
                     &copy; 2022 Mohlenkamp, Inc.
                 </section>
             </footer>
