--- a/develop/index.html
+++ b/develop/index.html
@@ -4,15 +4,27 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width-device-width, initial-scale=1.0" />
+    <!-- Styled for 1440 x 800 desktop default -->
     <link rel="stylesheet" href="./assets/css/style.css" />
+    <!-- Responsive layout for 768 ~ 1368 -->
+    <link rel="stylesheet" href="./assets/css/style2.css" />
+    <!-- Responsive layout for less than 768px width-->
+    <link rel="stylesheet" href="./assets/css/style3.css" />
     <title>Portfolio</title>
 </head>
 
+<!-- Version 0.9 because it's still not quite fully baked... Honestly,
+I think I could spend months getting this to be just right. Right now, 
+I need to not let perfection be the enemy of getting something deployed-->
+
+
 <body>
     <div class="outer-outer-wrapper">
+        <!-- Top section with logo and nav -->
         <div class="top-outer-wrapper">
             <section class="top-wrapper">
                 <div class="logo-wrapper">
+                    <!-- not enough time to make logo right now-->
                     <p>JM</p>
                 </div>
                 <div class="nav-wrapper">
@@ -28,13 +40,14 @@
                                 <a href="#bio">Bio</a>
                             </li>
                             <li>
-                                <a href="#contact">Contact Info</a>
+                                <a href="#contact">Contact</a>
                             </li>
                         </ul>
                     </nav>
                 </div>
             </section>
         </div>
+        <!-- Middle section with sidebar header, cards, and spotlight -->
         <div class="middle-outer-wrapper">
             <section class="middle-wrapper">
                 <div class="header-wrapper">
@@ -47,8 +60,8 @@
                 </div>
                 <section class="main-content">
                     <section class="menu-card-title">
-                        <h3>APPS</h3>
-                        <section class="cards-apps" id="apps">
+                        <h3 id="apps">APPS</h3>
+                        <section class="cards-apps">
                             <section class="menu-card-details">
                                 <!-- Image / Link / Description -->
                                 <img src="./assets/images/RunBuddyCard.gif" alt="Run Buddy Icon" />
@@ -74,8 +87,8 @@
                         </section>
                     </section>
                     <section class="menu-card-title">
-                        <h3>BASE</h3>
-                        <section class="cards-base" id="base">
+                        <h3 id="base">BASE</h3>
+                        <section class="cards-base">
                             <section class="menu-card-details">
                                 <iframe
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47264.0525706413!2d-86.80036994463407!3d36.15771647325709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8864ec3213eb903d%3A0x7d3fb9d0a1e9daa0!2sNashville%2C%20TN!5e0!3m2!1sen!2sus!4v1619326975586!5m2!1sen!2sus"
@@ -104,8 +117,8 @@
                             </section>
                         </section>
                     </section>
-                    <section class="menu-card-title" id="bio">
-                        <h3>BIO</h3>
+                    <section class="menu-card-title">
+                        <h3 id="bio">BIO</h3>
                         <section class="cards-bio">
                             <section class="menu-card-details">
                                 <img id="myavatar" src="./assets/images/myavatar.jpg"
@@ -126,6 +139,10 @@
                         </section>
                     </section>
                 </section>
+
+            <!-- In the acceptance criteria, it said that I needed to make the first
+            application presented larger. I opted to create a spotlight portion to the side
+            of the other cards to achieve this goal.-->
                 <article class="detail-content">
                     <h3>Application Spotlight</h3>
                     <img src="./assets/images/HoriseonCard.gif" alt="Horiseon Icon" />
@@ -136,13 +153,13 @@
                 </article>
             </section>
         </div>
+        <!-- Footer section for contact info -->
         <section class="bottom-wrapper">
-            <!-- footer -->
             <footer>
                 <h3>Contact</h3>
                 <section class="contact-info" id="contact">
                     <a href="https://www.linkedin.com/in/john-mohlenkamp-3418b98/">LinkedIn</a><br />
-                    &copy; 2022 Mohlenkamp, Inc.
+                    <p>&copy; 2022 Mohlenkamp, Inc. </p>
                 </section>
             </footer>
         </section>
