--- a/develop/index.html
+++ b/develop/index.html
@@ -74,9 +74,9 @@ I need to not let perfection be the enemy of getting something deployed-->
                                 <p>Website for yelling at crops to make them grow faster</p>
                             </section>
                             <section class="menu-card-details">
-                                <img src="./assets/images/ReactorCard.jpg" alt="Reactor Control Icon" />
-                                <a href="#">Reactor Control Program</a>
-                                <p>Website for directly controlling the spaceship fusion reactor core</p>
+                                <img src="./assets/images/Screenshot_MarsProject.jpg" alt="Mars Project" />
+                                <a href="https://dorler.github.io/MartiansOnly/">Mars Booking</a>
+                                <p>Website to plan and book a trip to Mars.</p>
                             </section>
                             <section class="menu-card-details">
                                 <img src="./assets/images/HoriseonCard.gif" alt="Horiseon Icon" />
@@ -94,26 +94,29 @@ I need to not let perfection be the enemy of getting something deployed-->
                                     src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d47264.0525706413!2d-86.80036994463407!3d36.15771647325709!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8864ec3213eb903d%3A0x7d3fb9d0a1e9daa0!2sNashville%2C%20TN!5e0!3m2!1sen!2sus!4v1619326975586!5m2!1sen!2sus"
                                     width="206" height="160" style="border:0;" allowfullscreen=""
                                     loading="lazy"></iframe>
-                                <br /><p>Nashville <br /><br />
-                                Latitude: 36° 09' 57.20" N
+                                <br />
+                                <p>Nashville <br /><br />
+                                    Latitude: 36° 09' 57.20" N
                                     Longitude: -86° 47' 3.98" W</p>
                             </section>
                             <section class="menu-card-details">
-                               <iframe src="https://g1.ipcamlive.com/player/player.php?alias=broadwaycam"
-                                        alt="Live stream video of Nashville Lower Broadway" width="206px" height="158px"
-                                        frameborder="0" allowfullscreen=""
-                                        style="border: none; max-width: 100%; overflow: hidden;"></iframe>
-                                
-                               <br /><p>View of Lower Broadway<br/><br />
-                                Traffic cam courtesy of Big Time Boots</p>
+                                <iframe src="https://g1.ipcamlive.com/player/player.php?alias=broadwaycam"
+                                    alt="Live stream video of Nashville Lower Broadway" width="206px" height="158px"
+                                    frameborder="0" allowfullscreen=""
+                                    style="border: none; max-width: 100%; overflow: hidden;"></iframe>
+
+                                <br />
+                                <p>View of Lower Broadway<br /><br />
+                                    Traffic cam courtesy of Big Time Boots</p>
                             </section>
                             <section class="menu-card-details">
                                 <iframe src="https://g1.ipcamlive.com/player/player.php?alias=lctowersouth"
-                                        alt="Live stream video of Nashville tower sky camera" width="206px"
-                                        height="158px" frameborder="0" allowfullscreen=""
-                                        style="border: none; max-width: 100%; overflow: hidden;"></iframe>
-                                <br /><p>Sky view from L&C Tower<br /><br />
-                                Sky cam courtesy of Fox 17</p>
+                                    alt="Live stream video of Nashville tower sky camera" width="206px" height="158px"
+                                    frameborder="0" allowfullscreen=""
+                                    style="border: none; max-width: 100%; overflow: hidden;"></iframe>
+                                <br />
+                                <p>Sky view from L&C Tower<br /><br />
+                                    Sky cam courtesy of Fox 17</p>
                             </section>
                         </section>
                     </section>
@@ -124,7 +127,8 @@ I need to not let perfection be the enemy of getting something deployed-->
                                 <img id="myavatar" src="./assets/images/myavatar.jpg"
                                     alt="Me with a silly smile and needing a shave" />
                                 <a href="#">Me</a>
-                                <p>Overweight, over-caffinated, under-worked, but with a sense of humor and a lousy singing voice</p>
+                                <p>Overweight, over-caffinated, under-worked, but with a sense of humor and a lousy
+                                    singing voice</p>
                             </section>
                             <section class="menu-card-details">
                                 <img src="./assets/images/GitHubCard.gif" alt="GitHub Icon">
@@ -140,7 +144,7 @@ I need to not let perfection be the enemy of getting something deployed-->
                     </section>
                 </section>
 
-            <!-- In the acceptance criteria, it said that I needed to make the first
+                <!-- In the acceptance criteria, it said that I needed to make the first
             application presented larger. I opted to create a spotlight portion to the side
             of the other cards to achieve this goal.-->
                 <article class="detail-content">
