--- a/develop/index.html
+++ b/develop/index.html
@@ -69,9 +69,9 @@ I need to not let perfection be the enemy of getting something deployed-->
                                 <p>Website for gym including personal trainers for custom workouts</p>
                             </section>
                             <section class="menu-card-details">
-                                <img src="./assets/images/ExtreneFarmCard.jpg" alt="Extreme Farming Icon" />
-                                <a href="#">Extreme Farming</a>
-                                <p>Website for yelling at crops to make them grow faster</p>
+                                <img src="./assets/images/JobPreScreen.jpg" alt="Extreme Farming Icon" />
+                                <a href="https://ratr20.herokuapp.com/">Job Pre-Screener Tool</a>
+                                <p>Website for pre-screening recruiter jobs</p>
                             </section>
                             <section class="menu-card-details">
                                 <img src="./assets/images/Screenshot_MarsProject.jpg" alt="Mars Project" />
